css/style.css
/* ... */
#success-img img {
  background-color: white;
  padding: 0.6rem;
  border-radius: 12px;
  box-shadow: 1px 2px 2px #c6c6c6;
}

.success h2 {
  font-size: 2.4rem;
  margin-bottom: 0;
  color: var(--navy-blue);
}

.success p {
  font-size: 1.2rem;
}

.success button {
  background-color: white;
  margin-top: 1rem;
  border: none;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1.2rem;
  border-radius: 10px;
  transition-duration: 0.4s;
  box-shadow: 1px 2px 2px #c6c6c6;
}

.success button:hover {
  background-color: var(--yellow);
}

/* ======== HOME PAGE BIO & Contact PROFILE ========== */

.home-bio-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0.5rem 0.5rem 0rem 0.5rem;
  background-color: var(--bg-grey);
  padding: 1rem 1rem 0rem 1rem;
}

.home-bio-text {
  font-size: 1.8rem;
  text-align: center;
  padding: 1.2rem 6rem 2.2rem 6rem;
  border-top: solid 6px var(--yellow);
  /* border-right: solid 6px var(--yellow); */

  background-color: var(--navy-blue);
  color: white;
  border-radius: 10px;
}

.home-bio-text button {
  background-color: var(--yellow);
  color: black;
  margin-bottom: 1rem;
  border: none;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 1.2rem;
  border-radius: 10px;
  transition-duration: 0.4s;
  box-shadow:
    0 8px 16px 0 rgba(0, 0, 0, 0.2),
    0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.home-bio-text button:hover {
  background-color: #e4e4e4;
}

/* ======== ABOUT PAGE BIO PROFILE ========== */

.about-profile {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 1rem;
}

.about-photo {
  flex: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* border-radius: 12px 0 0 12px; */
  background-color: #e4e4e4;
  padding: 2rem 1rem 1rem 1rem;
}

/* .about-photo-pic img {
  width: 200px;
  border-radius: 50%;
  background-color: white;
  padding: 0.5rem;
  box-shadow: 1px 2px 2px #c6c6c6;
} */

.about-profile-text {
  flex: 50%;
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 1rem 3rem 2rem 3rem;
  /* border-radius: 0 12px 12px 0; */
  background-color: var(--navy-blue);
  border-left: 4px solid var(--yellow);
}

.about-profile-text p {
  font-size: 1.2rem;
  font-weight: lighter;
  color: white;
}

.about-profile-text h6 {
  font-size: 1rem;
  text-transform: uppercase;
  color: var(--yellow);
  letter-spacing: 2px;
  margin-right: 1rem;
}

.about-profile-text h3 {
  font-size: 2.4rem;
  color: var(--yellow);
}

.about-containers {
  display: flex;
  flex-wrap: wrap;
  font-size: 1.2rem;
  color: #2a2a2d;
  margin-top: 1rem;
}

.about-inner-content {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 2rem 1rem 2rem;
  border-radius: 12px;
  box-shadow: 1px 2px 2px #c6c6c6;
  background-color: #e4e4e4;
}

.about-inner-content-dark {
  display: flex;
  flex-wrap: wrap;
  padding: 1rem 2rem 1rem 2rem;
  border-radius: 12px;
  box-shadow: 1px 2px 2px #c6c6c6;
  background-color: var(--navy-blue);
  color: white;
}

.about-container-left {
  width: 45%;
  margin-right: 2rem;
}

.about-container-right h5 {
  line-height: 0rem;
  margin-bottom: 0;
  color: var(--yellow);
}

.about-container-right {
  width: 45%;
}

.about-containers h3 {
  color: #2a628f;
}

/* ====== BULLET POINT CARDS || ALT GRID METHOD ====== */

.card-container-2 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-grey);
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.card-gallery-2 {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  background-color: var(--bg-grey);
  padding: 1rem 0.5rem 0.5rem 0.5rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.card-column-2 {
  flex: 25%;
  max-width: 23.7%;
  padding: 0rem 1rem 0.5rem 1rem;
  background-color: var(--navy-blue);
  color: white;
  margin: 0 0.5em 0.5em 0.5em;
  border-radius: 10px;
  box-shadow: 1px 2px 2px #c6c6c6;
  border-top: solid 6px var(--yellow);
}

.card-column-2 > h2 {
  text-align: center;
  color: var(--yellow);
  font-size: 1.2rem;
}

.card-highlight-2 {
  width: 100%;
  height: 100px;
  background-color: var(--navy-blue);
  align-content: center;
  text-align: center;
}

/* === NEW HOMEPAGE INFO CARDS ==== */

.info-cards-home-box {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-grey);
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.info-cards-flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 1rem 0.5rem 0.5rem 0.5rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.info-cards-responsive {
  flex: 25%;
  max-width: 23.7%;
  margin: 0 0.5em 0.5em 0.5em;
  border-radius: 12px;
  box-shadow: 1px 2px 2px #c6c6c6;
  background-color: white;
  min-width: 200px;
  border-bottom: solid 6px var(--yellow);
}

/* === INFO CARDS ICON AND HEADER TEXT ==== */

.info-cards-header {
  width: 100%;
  background-color: var(--navy-blue);
  color: var(--yellow);
  border-top: solid 6px var(--yellow);
  text-align: center;
  border-radius: 12px 12px 0 0;
  padding-bottom: 0.4rem;
}

.info-cards-header > i {
  color: white;
}

.info-cards-header > h2 {
  font-size: 1.2rem;
  margin-top: -0.5rem;
  /* line-height: 0rem; */
}

/* === INFO CARDS TEXT BOTTOM CONTENT ==== */

.card-text-box {
  padding-left: 1rem;
  padding-right: 1rem;
}

.contact-card-left {
  /* width: 100%;
  height: auto; */
  color: white;
  align-content: center;
  text-align: center;
}

/* ====== ABOUT DUAL BOX LAYOUT ====== */

.card-column-about {
  flex: 50%;
  max-width: 48%;
  padding: 0.5em 2em 1em 2em;
  background-color: #ffffff;
  margin: 0.4em;
  border-radius: 6px;
  box-shadow: 1px 2px 2px #c6c6c6;
  background-color: var(--navy-blue);
  color: white;
}

.card-column-about > h2 {
  text-align: center;
  color: var(--yellow);
}
/* ... */

